# dspcalc

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  unit_convert.rs
src/calc/: config.rs  constraint.rs  mod.rs  objective.rs  translator.rs
src/calc/objective/: mod.rs
src/data/: mod.rs
src/data/dsp/: item.rs  recipe.rs
src/dsp/: building.rs  item.rs  mine.rs  mod.rs  proliferator.rs  recipe.rs
src/dsp/recipe/: basic_recipe.rs  mine.rs  mod.rs  photons.rs  power.rs  proliferator.rs
src/solver/: config.rs  constraint.rs  mod.rs  objective.rs  proliferator.rs  translator.rs
