[package]
name = "factory_calculator"
version = "0.1.0"
edition = "2021"

[lib]
name = "factory_calculator"
path = "src/lib.rs"

[dependencies]
good_lp = { version = "1.12.0", features = [
    "clarabel",
], default-features = false }
num = "0.4.3"
strum = "0.27.1"
strum_macros = "0.27.1"

dspdb = { git = "https://github.com/bWFuanVzYWth/dspdb", branch = "master" }
