cargo-features = ["profile-rustflags"]

[package]
name = "dspcalc"
version = "0.1.0"
edition = "2021"

[lib]
name = "dspcalc"
path = "src/lib.rs"

[dependencies]
good_lp = { version = "1.12.0", features = [
    "clarabel",
], default-features = false }
num = "0.4.3"
strum = "0.27.1"
strum_macros = "0.27.1"

dspdb = { git = "https://github.com/bWFuanVzYWth/dspdb", branch = "master" }
bimap = "0.6.3"
thiserror = "2.0.12"

[profile.release]
codegen-units = 1
lto = "fat"
rustflags = [
    "-C",
    "target-cpu=native",
    "-C",
    "link-arg=-fuse-ld=lld",
    "-Z",
    "threads=8",
]
